--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "fcc-mongo-mongoose-challenges",
     "version": "0.0.1",
-    "description": "A boilerplate project",
+    "description": "exercises done through FCC Curriculum",
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
@@ -9,11 +9,9 @@
     "dependencies": {
         "body-parser": "^1.15.2",
         "dotenv": "^8.2.0",
-        "express": "^4.12.4"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/freeCodeCamp/boilerplate-mongomongoose.git"
+        "express": "^4.12.4",
+        "mongoose": "^6.0.1",
+        "mongodb" : "4.2.14"
     },
     "keywords": [
         "node",
